# lab-2-multithreading-eltopus

./: .gitignore
Code/: CMakeLists.txt  Makefile_old  app.js  glue.cpp  glue.js  image.cpp  image.h  image_classes.idl  image_glue_wrapper.cpp  image_operations.cpp  images.cpp  ipl.js  ipl.wasm  ipl_min.js  ipl_min.wasm  main  main.cpp  metrics.cpp  output.js  output.wasm  package-lock.json  package.json  performance.cpp
Code/design/: abstract_image.cpp  concrete_image.cpp  image_classes.idl  image_glue_wrapper.cpp  image_operations.cpp  images.cpp  main  main.cpp  originator.cpp
Data/base64_images/: bird2.txt  bird3.txt  bird4.txt  bjpeg.txt  bmp2.txt  cat.txt  chicken.txt  gray.txt  horse.txt  horse2.txt  jpg2.txt  tiger2.txt
Data/metrics/: cPlusMetrics.csv  jsMetrics.csv  jsMetrics_min.csv
